panel: disable context menu on banner
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/core/dump.js.in
+++ b/core/dump.js.in
@@ -193,6 +193,9 @@ async function image_dump(event)
 
 async function image_dump_clipboard(event)
 {
+	if (!canvas.contains(event.target))
+		return
+
 	if (!blob) {
 		warn('nothing to be done')
 		return
