build: add extension category
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
    "engines": {
       "vscode": "^1.74.0"
    },
+   "categories": [
+      "Education",
+      "Other",
+      "Visualization"
+   ],
    "repository": {
       "type": "git",
       "url": "git@github.com:barroit/dumpline.git"
