build: prefix repo url with git+ssh
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
    ],
    "repository": {
       "type": "git",
-      "url": "git@github.com:barroit/dumpline.git"
+      "url": "git+ssh://git@github.com:barroit/dumpline.git"
    },
    "contributes": {
       "commands": [
