dump: bind image_dump_clipboard to copy button contextmenu
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/core/dump.js.in
+++ b/core/dump.js.in
@@ -327,10 +327,8 @@ link.addEventListener('click', event =>
 	dumpline.postMessage({ open: event.target.href })
 })
 
-button.addEventListener('click', event =>
-{
-	image_dump_clipboard()
-})
+button.addEventListener('click', image_dump_clipboard)
+button.addEventListener('contextmenu', image_dump_clipboard)
 
 banner.addEventListener('contextmenu', event =>
 {
