--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
                "default": true,
                "description": "Drop trailing newline",
                "type": "boolean"
+            },
+            "39dump.padHead": {
+               "default": true,
+               "description": "Match first line offset with editor",
+               "type": "boolean"
             }
          }
       },
