dump: only pad head if codebox has child
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/core/dump.js.in
+++ b/core/dump.js.in
@@ -313,7 +313,8 @@ async function image_dump(event)
 	if (enabled(ctx.config, '39dump', 'trimTail'))
 		trim_tail(codebox)
 
-	if (enabled(ctx.config, '39dump', 'padHead'))
+	if (codebox.firstElementChild &&
+	    enabled(ctx.config, '39dump', 'padHead'))
 		pad_head(codebox)
 
 	codebox.id = 'codebox'
